# ShaderEditor

./: .gitignore  .gitmodules  CMakeLists.txt  imgui.ini  readme.md  test_shader.fs  test_shader.vs
include/: common.h  ui.h
include/learnopengl/: camera.h  mesh.h  model.h  root_directory.h  shader.h  shader_m.h  shader_s.h
include/shader_editor/: code_editor.h  common.h  editor.h  mesh_feeder.h  renderer.h  ui.h
libs/: CMakeLists.txt
resources/shaders/: framebuffers.fs
src/: 3rd_impl.cpp  code_editor.cpp  editor.cpp  framebuffers.cpp  framebuffers_screen.fs  main.cpp  mesh_feeder.cpp  renderer.cpp  ui.cpp
src/modules/: mesh_feeder.cpp  renderer.cpp
src/ui/: glsl_editor_window.cpp  log_window.cpp  menu_bar.cpp  mesh_input_window.cpp  render_window.cpp  test_window.cpp  uniform_window.cpp  vertex_input_window.cpp
